Closed Bug 1237896 Opened 10 years ago Closed 10 years ago

[Gamepad] Button Event cannot be correctly triggered after reconnect

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: cleu, Assigned: cleu)

Details

Attachments

(1 file)

Test Environment: Mac OSX Yosemite 10.10.5 and Stock PS4 controller over USB Firefox Version 43.0.4 and nightly Symptom: In HTML5 gamepad tester (html5gamepad.com) DOM side cannot receive button event from HAL after gamepad is reconnected. Cause: CocoaGamepad.cpp passes incorrect gamepad index after any disconnect event Solution: Change the first argument NewButtonEvent() and NewAxisEvent() in InputValueChanged() from i to gamepad.mSuperIndex Patch is ongoing
Assignee: nobody → cleu
Attachment #8705490 - Flags: review?(kyle)
I found this bug when I am moving Gamepad IPDL to PBackground. I think it's a seperate issue, so I filed a new bug.
Attachment #8705490 - Flags: review?(kyle) → review+
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: