Bug 1237896 - [Gamepad] Button Event cannot be correctly triggered after reconnect. r=qdot